--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arialg;
+    font-family: Arial;
 }
 
 a {
@@ -47,4 +47,31 @@ ul {
     font-size: 30px;
     text-transform: uppercase;
     color: azure;
+}
+
+.header__content {
+    height: 500px;
+    background: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+h1 {
+    color: white;
+    text-transform: uppercase;
+}
+
+.figure {
+    display: flex;
+    gap: 20px;
+}
+
+.item {
+    width: 50px;
+    height: 50px;
+    background: red;
+    clip-path: circle(50% at 50% 50%);
 }
