--- a/style/style.css
+++ b/style/style.css
@@ -25,6 +25,9 @@ ul {
 .header__nav {
     background: rgb(35, 125, 214);
     padding: 20px;
+    position: fixed;
+    z-index: 99;
+    width: 100%;
 }
 
 .header__nav-container {
@@ -74,4 +77,20 @@ h1 {
     height: 50px;
     background: red;
     clip-path: circle(50% at 50% 50%);
+}
+
+.main {
+    background: rgb(54, 54, 54);
+    height: 100vh;
+}
+
+.main__block {
+    display: flex;
+    gap: 10px;
+}
+
+.main__item {
+    width: calc(100% / 6);
+    height: 500px;
+    background: red;
 }
