--- a/style/style.css
+++ b/style/style.css
@@ -94,3 +94,14 @@ h1 {
     height: 500px;
     background: red;
 }
+
+.footer {
+    background: black;
+    padding: 30px;
+    display: flex;
+    justify-content: center;
+}
+
+.footer p {
+    color: azure;
+}
